--- a/BT_Pre_Alpha/Config/DefaultEngine.ini
+++ b/BT_Pre_Alpha/Config/DefaultEngine.ini
@@ -7,8 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleField_Grounds.BattleField_Grounds
-GameDefaultMap=/Game/BattleField_Grounds.BattleField_Grounds
+EditorStartupMap=/Game/Levels/MainField.MainField
+GameDefaultMap=/Game/Levels/MainField.MainField
+GlobalDefaultGameMode=/Game/BT_BP.BT_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
