--- a/BT_Pre_Alpha/BT_Pre_Alpha.uproject
+++ b/BT_Pre_Alpha/BT_Pre_Alpha.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "BT_Pre_Alpha",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
