--- a/BT_Pre_Alpha/Config/DefaultEngine.ini
+++ b/BT_Pre_Alpha/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/MainField.MainField
-GameDefaultMap=/Game/Levels/MainField.MainField
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BT_BP.BT_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -55,5 +55,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
