--- a/BT_Pre_Alpha/Config/DefaultInput.ini
+++ b/BT_Pre_Alpha/Config/DefaultInput.ini
@@ -45,6 +45,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="FIRE",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="Aim Horizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Aim Vertical",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
