--- a/BT_Pre_Alpha/Config/DefaultInput.ini
+++ b/BT_Pre_Alpha/Config/DefaultInput.ini
@@ -46,8 +46,13 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="FIRE",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="FOR_WARD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +AxisMappings=(AxisName="Aim Horizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Aim Vertical",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="Move_Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move_Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move_Left",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move_Backward",Scale=-1.000000,Key=S)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
