--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-BT_Pre_Alpha/Content/StarterContent/
 Heightmap.png
 mainmenu.jpg
 BT_Pre_Alpha/Content/Levels/MainField.umap
+BT_Pre_Alpha/Content/Mortar/mortar_dome.uasset
+BT_Pre_Alpha/Content/Mortar/mortar_barrel.uasset
+BT_Pre_Alpha/Content/Mortar/mortar_body.uasset
+BT_Pre_Alpha/Content/StarterContent.7z
+BT_Pre_Alpha/Content/StarterContent
