--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ BT_Pre_Alpha/Content/Mortar/mortar_barrel.uasset
 BT_Pre_Alpha/Content/Mortar/mortar_body.uasset
 BT_Pre_Alpha/Content/StarterContent.7z
 BT_Pre_Alpha/Content/StarterContent
+BT_Pre_Alpha/Content/StarterContent2/
