--- a/BT_Pre_Alpha/Config/DefaultInput.ini
+++ b/BT_Pre_Alpha/Config/DefaultInput.ini
@@ -46,7 +46,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="FIRE",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="FOR_WARD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="SwapCam",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="Aim Horizontal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Aim Vertical",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Move_Forward",Scale=1.000000,Key=W)
